[gd_scene load_steps=2 format=3 uid="uid://drsech2gjfoav"]

[ext_resource type="Script" path="res://PixelInterface/ViewFnt.gd" id="1_oukxk"]

[node name="ViewFnt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oukxk")

[node name="TextureAtlas" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(4, 4)

[node name="TexturePreview" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
